// gRPC server for SearchService (stub implementation)
use tonic::{Request, Response, Status};

pub mod nova {
    pub mod search_service {
        pub mod v1 {
            tonic::include_proto!("nova.search_service.v1");
        }
        pub use v1::*;
    }
}

use nova::search_service::v1::search_service_server::SearchService;
use nova::search_service::v1::*;

#[derive(Clone, Default)]
pub struct SearchServiceImpl;

#[tonic::async_trait]
impl SearchService for SearchServiceImpl {
    async fn full_text_search(
        &self,
        _request: Request<FullTextSearchRequest>,
    ) -> Result<Response<FullTextSearchResponse>, Status> {
        Err(Status::unimplemented("full_text_search not implemented"))
    }

    async fn search_posts(
        &self,
        _request: Request<SearchPostsRequest>,
    ) -> Result<Response<SearchPostsResponse>, Status> {
        Err(Status::unimplemented("search_posts not implemented"))
    }

    async fn search_users(
        &self,
        _request: Request<SearchUsersRequest>,
    ) -> Result<Response<SearchUsersResponse>, Status> {
        Err(Status::unimplemented("search_users not implemented"))
    }

    async fn search_hashtags(
        &self,
        _request: Request<SearchHashtagsRequest>,
    ) -> Result<Response<SearchHashtagsResponse>, Status> {
        Err(Status::unimplemented("search_hashtags not implemented"))
    }

    async fn get_posts_by_hashtag(
        &self,
        _request: Request<GetPostsByHashtagRequest>,
    ) -> Result<Response<GetPostsByHashtagResponse>, Status> {
        Err(Status::unimplemented("get_posts_by_hashtag not implemented"))
    }

    async fn get_search_suggestions(
        &self,
        _request: Request<GetSearchSuggestionsRequest>,
    ) -> Result<Response<GetSearchSuggestionsResponse>, Status> {
        Err(Status::unimplemented("get_search_suggestions not implemented"))
    }

    async fn advanced_search(
        &self,
        _request: Request<AdvancedSearchRequest>,
    ) -> Result<Response<AdvancedSearchResponse>, Status> {
        Err(Status::unimplemented("advanced_search not implemented"))
    }

    async fn record_search_query(
        &self,
        _request: Request<RecordSearchQueryRequest>,
    ) -> Result<Response<RecordSearchQueryResponse>, Status> {
        Err(Status::unimplemented("record_search_query not implemented"))
    }

    async fn get_trending_searches(
        &self,
        _request: Request<GetTrendingSearchesRequest>,
    ) -> Result<Response<GetTrendingSearchesResponse>, Status> {
        Err(Status::unimplemented("get_trending_searches not implemented"))
    }

    async fn get_search_analytics(
        &self,
        _request: Request<GetSearchAnalyticsRequest>,
    ) -> Result<Response<GetSearchAnalyticsResponse>, Status> {
        Err(Status::unimplemented("get_search_analytics not implemented"))
    }
}

