import Foundation

// MARK: - Search Service
// Handles search operations via SearchService backend

class SearchService {
    private let client = APIClient.shared

    // MARK: - Search

    /// Search across all content types (users, posts, hashtags)
    func searchAll(query: String, filter: SearchFilter = .all, limit: Int = 20, offset: Int = 0) async throws -> [SearchResult] {
        // TODO: Implement gRPC call to SearchService.SearchAll
        // Example:
        // let request = SearchAllRequest(
        //     query: query,
        //     filter: filter.rawValue,
        //     limit: limit,
        //     offset: offset
        // )
        // let response: SearchAllResponse = try await client.request(endpoint: "/search/all", body: request)
        //
        // // Map proto results to SearchResult enum
        // var results: [SearchResult] = []
        // results += response.users.map { .user(/* map proto User */) }
        // results += response.posts.map { .post(/* map proto Post */) }
        // results += response.hashtags.map { .hashtag(/* map proto Hashtag */) }
        // return results
        throw APIError.notFound
    }

    /// Search for users only
    func searchUsers(query: String, limit: Int = 20, offset: Int = 0) async throws -> [SearchResult] {
        // TODO: Implement gRPC call to SearchService.SearchUsers
        // Example:
        // let request = SearchUsersRequest(query: query, limit: limit, offset: offset)
        // let response: SearchUsersResponse = try await client.request(endpoint: "/search/users", body: request)
        // return response.users.map { user in
        //     .user(
        //         id: user.id,
        //         username: user.username,
        //         displayName: user.display_name,
        //         avatarUrl: user.avatar_url,
        //         isVerified: user.is_verified
        //     )
        // }
        throw APIError.notFound
    }

    /// Search for posts only
    func searchPosts(query: String, limit: Int = 20, offset: Int = 0) async throws -> [SearchResult] {
        // TODO: Implement gRPC call to SearchService.SearchPosts
        // Example:
        // let request = SearchPostsRequest(query: query, limit: limit, offset: offset)
        // let response: SearchPostsResponse = try await client.request(endpoint: "/search/posts", body: request)
        // return response.posts.map { post in
        //     .post(
        //         id: post.id,
        //         content: post.content,
        //         author: post.creator_id,
        //         createdAt: Date(timeIntervalSince1970: TimeInterval(post.created_at)),
        //         likeCount: post.like_count
        //     )
        // }
        throw APIError.notFound
    }

    /// Search for hashtags only
    func searchHashtags(query: String, limit: Int = 20, offset: Int = 0) async throws -> [SearchResult] {
        // TODO: Implement gRPC call to SearchService.SearchHashtags
        // Example:
        // let request = SearchHashtagsRequest(query: query, limit: limit, offset: offset)
        // let response: SearchHashtagsResponse = try await client.request(endpoint: "/search/hashtags", body: request)
        // return response.hashtags.map { hashtag in
        //     .hashtag(tag: hashtag.tag, postCount: hashtag.post_count)
        // }
        throw APIError.notFound
    }

    // MARK: - Suggestions

    /// Get search suggestions for autocomplete
    func getSuggestions(query: String, limit: Int = 10) async throws -> [SearchSuggestion] {
        // TODO: Implement gRPC call to SearchService.GetSearchSuggestions
        // Example:
        // let request = GetSearchSuggestionsRequest(query: query, limit: limit)
        // let response: GetSearchSuggestionsResponse = try await client.request(endpoint: "/search/suggestions", body: request)
        // return response.suggestions.map { suggestion in
        //     SearchSuggestion(
        //         id: suggestion.id,
        //         text: suggestion.text,
        //         type: SearchSuggestionType(rawValue: suggestion.type) ?? .recent,
        //         count: suggestion.count
        //     )
        // }
        throw APIError.notFound
    }

    /// Get trending topics/hashtags
    func getTrendingTopics(limit: Int = 10) async throws -> [SearchResult] {
        // TODO: Implement gRPC call to SearchService.GetTrendingTopics
        // Example:
        // let request = GetTrendingTopicsRequest(limit: limit)
        // let response: GetTrendingTopicsResponse = try await client.request(endpoint: "/search/trending", body: request)
        // return response.topics.map { topic in
        //     .hashtag(tag: topic.tag, postCount: topic.post_count)
        // }
        throw APIError.notFound
    }

    // MARK: - Recent Searches

    /// Get user's recent search history
    func getRecentSearches(limit: Int = 10) async throws -> [String] {
        // TODO: Implement local storage or backend call
        // This might be stored locally in UserDefaults or fetched from backend
        throw APIError.notFound
    }

    /// Save a search query to history
    func saveRecentSearch(_ query: String) {
        // TODO: Implement local storage
        // Save to UserDefaults or send to backend
    }

    /// Clear recent search history
    func clearRecentSearches() {
        // TODO: Implement local storage clear
    }
}
